--- a/src/app/RootLayout.module.css
+++ b/src/app/RootLayout.module.css
@@ -1,6 +1,12 @@
 .layout {
   display: flex;
   flex-direction: column;
+
+  background-image: url("/background.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
   min-height: 100vh;
 }
 
