feat: call to action btn added

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -2,27 +2,38 @@
 .container {
   padding: 2rem;
   min-height: 100vh; /* Full height */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .heading {
   color: rgb(var(--foreground-rgb));
-  font-size: 2rem; /* Moderately large */
-  margin-top: 2rem; /* Adds spacing at the top */
+  font-size: 3rem; /* Moderately large */
+  margin-bottom: 1rem; /* Adds spacing at the top */
   text-align: center; /* Centers the heading */
 }
 
-.nav-list {
-  list-style: none;
-  padding: 0;
-  text-align: center; /* Centers the list */
+.call-to-action {
+  background-color: #ff4081; /* Contrasting color */
+  border: none;
+  padding: 1rem 2rem;
+  font-size: 1.25rem;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin: 2rem; /* Spacing around the button */
+  text-align: center; /* Center the text inside the button */
 }
 
-.nav-list li {
-  margin: 0.5rem 0; /* Spacing between list items */
+.call-to-action:hover {
+  background-color: #e03565; /* Darken color on hover */
 }
 
 .link {
-  color: blue; /* Pink text color */
+  color: blue;
   text-decoration: none; /* No underline */
   font-weight: 500; /* Medium font weight */
   transition: color 0.2s ease; /* Smooth transition for color */
