feat: navbar added to header

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,5 +13,22 @@
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 }
 
-.logo {
+.logoContainer {
+  cursor: pointer;
+  display: flex;
+}
+
+.nav {
+  display: flex;
+}
+
+.navList {
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.navItem {
+  margin-left: 2rem;
 }
