--- a/src/app/RootLayout.module.css
+++ b/src/app/RootLayout.module.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
 
-  /* background-image: url("/background.webp"); */
+  background-image: var(--background-image);
   background-size: cover;
   background-position: 45% 50%;
   background-repeat: no-repeat;
