styles: basic background color added to input box

--- a/src/components/VideoUploadForm/VideoUploadForm.module.css
+++ b/src/components/VideoUploadForm/VideoUploadForm.module.css
@@ -19,6 +19,8 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
+  background-color: #f2f2f2;
+  color: var(--text-color);
 }
 
 .formButton {
