styles: global input box standard across all browser

--- a/src/components/VideoUploadForm/VideoUploadForm.module.css
+++ b/src/components/VideoUploadForm/VideoUploadForm.module.css
@@ -19,7 +19,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
-  background-color: #f2f2f2;
+  background-color: var(--input-bg-color);
   color: var(--text-color);
 }
 
