--- a/src/app/RootLayout.module.css
+++ b/src/app/RootLayout.module.css
@@ -18,6 +18,7 @@
   background-size: cover;
   background-position: 45% 50%;
   background-repeat: no-repeat;
+  background-attachment: fixed; /* Prevents the zoom in effect on the video uploads page */
 
   min-height: 100vh;
   /* padding: 1rem; Cool Design idea*/
