--- a/src/components/VideoUploadForm/VideoUploadForm.module.css
+++ b/src/components/VideoUploadForm/VideoUploadForm.module.css
@@ -3,10 +3,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 20px;
   font-family: "Roboto", sans-serif; /* or 'Inter', 'Poppins', 'Cabin' */
-  max-width: calc(100vw - 40px);
+  width: auto;
   padding: 20px;
   box-sizing: border-box;
 }
