--- a/src/components/VideoUploadForm/VideoUploadForm.module.css
+++ b/src/components/VideoUploadForm/VideoUploadForm.module.css
@@ -1,45 +1,65 @@
-/* VideoUploadForm.module.css */
 .formContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
   gap: 20px;
-  font-family: "Roboto", sans-serif; /* or 'Inter', 'Poppins', 'Cabin' */
-  width: auto;
+  width: 100%;
+  max-width: 600px; /* Adjust based on your preference */
+  margin: 0 auto; /* Centering the form */
   padding: 20px;
-  box-sizing: border-box;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Optional: adds subtle shadow */
+  background: var(--input-bg-color); /* Assuming a light theme */
+  border-radius: 8px;
 }
 
-.formInput,
+.label {
+  display: block;
+  font-weight: 600;
+  margin-bottom: 8px;
+  color: var(--text-color); /* Dark grey for text to ensure readability */
+}
+
+.formInput {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px; /* Adds space below the input */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px; /* Ensures text is easily readable */
+}
+
 .formButton {
   width: 100%;
-  max-width: 400px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-sizing: border-box;
-  background-color: var(--input-bg-color);
-  color: var(--text-color);
+  padding: 15px;
+  background-color: #007bff; /* A bright blue for the submit button */
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 18px; /* Slightly larger font for button text */
+  transition: background-color 0.2s; /* Smooth transition for button hover */
 }
 
-.formButton {
-  cursor: pointer;
-  background-color: #007bff;
-  color: white;
-  border: none;
+.formButton:hover {
+  background-color: #0056b3; /* Darker blue on hover */
 }
 
 .questionGroup {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 10px;
-  width: 100%;
-  box-sizing: border-box;
+  border: 1px solid #eee; /* Light grey border for each question group */
+  border-radius: 4px;
+  padding: 15px;
+  margin-bottom: 20px; /* Adds space between question groups */
 }
 
-/* @media screen and (min-width: 768px) {
-    .questionGroup {
-      grid-template-columns: repeat(4, 1fr);
-    }
-  } */
+@media (min-width: 768px) {
+  .questionGroup {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Two columns on larger screens */
+    gap: 15px;
+  }
+
+  .formInput,
+  .formButton {
+    max-width: none; /* Allows the button and inputs to fill the grid */
+  }
+}
