--- a/src/components/VideoPlayer/VideoPlayer.module.css
+++ b/src/components/VideoPlayer/VideoPlayer.module.css
@@ -4,6 +4,7 @@
   max-width: 100%; /* Ensures the container doesn't exceed the width of its parent */
   margin: auto; /* This will center the container */
   aspect-ratio: 16 / 9; /* This sets a consistent aspect ratio for the video */
+  max-height: 90vh;
 }
 
 .ReactPlayer {
@@ -28,5 +29,17 @@
 @media screen and (max-width: 480px) {
   .VideoContainer {
     aspect-ratio: 1; /* More square aspect ratio for very small screens */
+  }
+}
+
+@media screen and (max-width: 768px) and (orientation: landscape) {
+  .VideoContainer {
+    /* This will use more of the available height in landscape mode */
+    aspect-ratio: 16 / 9; /* You can tweak this ratio if you need to */
+    max-height: none; /* Remove the max-height restriction or adjust as necessary */
+  }
+  .ReactPlayer {
+    /* Adjust the top position so the video is still vertically centered */
+    top: 50%;
   }
 }
