--- a/src/components/Quiz/Quiz.module.css
+++ b/src/components/Quiz/Quiz.module.css
@@ -42,6 +42,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-bottom: 10px;
 }
 
 .quizButton {
@@ -63,6 +64,12 @@
 .quizButton:disabled {
   background-color: #ccc;
   cursor: not-allowed;
+}
+
+.feedbackText {
+  color: #333;
+  text-align: center;
+  padding-bottom: 10px;
 }
 
 /* Larger screens */
