styles: continue btn in disabled mode to look more disabled

--- a/src/components/Quiz/Quiz.module.css
+++ b/src/components/Quiz/Quiz.module.css
@@ -62,8 +62,10 @@
 }
 
 .quizButton:disabled {
-  background-color: #ccc;
+  background-color: #d1d5db;
+  color: #9ca3af;
   cursor: not-allowed;
+  border: 1px solid #cbd5e1;
 }
 
 .feedbackText {
