--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,7 @@
   --secondary-color: #ffa500; /* Light theme secondary color */
   --accent-color-hover: #0056b3; /* Light theme accent color hover */
   --input-bg-color: #ffffff;
+  --form-bg-color: #f9f9f9;
 }
 
 /* Dark theme styles */
